Name:                sqlite-simple
Version:             0.4.1.0
Synopsis:            Mid-Level SQLite client library
Description:
    Mid-level SQLite client library, based on postgresql-simple.
    .
    Main documentation: "Database.SQLite.Simple"
    .
    For more info, browse to <http://github.com/nurpax/sqlite-simple>
    for examples & more information.

License:             BSD3
License-file:        LICENSE
Author:              Bryan O'Sullivan, Leon P Smith, Janne Hellsten
Maintainer:          Janne Hellsten <jjhellst@gmail.com>
Copyright:           (c) 2011 MailRank, Inc.,
                     (c) 2011-2012 Leon P Smith,
                     (c) 2012 Janne Hellsten
Homepage:            http://github.com/nurpax/sqlite-simple
bug-reports:         http://github.com/nurpax/sqlite-simple/issues
Category:            Database
Build-type:          Simple

Cabal-version:       >= 1.10

extra-source-files:  README.markdown

Library
  Default-language:  Haskell2010
  Exposed-modules:
     Database.SQLite.Simple
     Database.SQLite.Simple.Ok
     Database.SQLite.Simple.FromField
     Database.SQLite.Simple.FromRow
     Database.SQLite.Simple.Internal
     Database.SQLite.Simple.ToField
     Database.SQLite.Simple.ToRow
     Database.SQLite.Simple.Types

  Build-depends:
    base < 5,
    bytestring >= 0.9,
    containers,
    direct-sqlite >= 2.3.3 && < 2.4,
    text >= 0.11,
    time,
    old-locale >= 1.0.0.0,
    transformers

  default-extensions:
      DoAndIfThenElse
    , OverloadedStrings
    , BangPatterns
    , ViewPatterns
    , TypeOperators

  ghc-options: -Wall -fno-warn-name-shadowing

source-repository head
  type:     git
  location: http://github.com/nurpax/sqlite-simple


test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0

  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:
    Common
    Simple
    Errors
    ParamConv
    Utf8Strings
    TestImports
    UserInstances

  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind

  default-extensions:
      NamedFieldPuns
    , OverloadedStrings
    , Rank2Types
    , RecordWildCards

  build-depends: base
               , base16-bytestring
               , bytestring
               , HUnit
               , sqlite-simple
               , direct-sqlite
               , text
               , time

